dto 구조 수정